llvm/test/MC/Colossus/csrs_ipu2.s

# This file is auto-generated. Do not edit.
# Generated by GenerateRegisterTests.py.
# Test that we can use all CSR values declared in Isa.xml.

# RUN: llvm-mc -triple colossus-graphcore-elf -assemble -mattr=+ipu2 < %s \
# RUN: | FileCheck %s

# RUN: not llvm-mc -triple colossus-graphcore-elf -assemble -mattr=+ipu2 \
# RUN: -defsym ERROR=1 < %s 2>&1 | FileCheck %s --check-prefix=CHECK-ERROR

# CHECK: put 0, $m0
.worker
put $PC, $m0
# CHECK: put 0, $m0
.supervisor
put $PC, $m0

# CHECK: put 112, $m0
.worker
put $DBG_DATA, $m0
# CHECK: put 112, $m0
.supervisor
put $DBG_DATA, $m0

# CHECK: put 113, $m0
.worker
put $DBG_BRK_ID, $m0
# CHECK: put 113, $m0
.supervisor
put $DBG_BRK_ID, $m0

# CHECK: put 114, $m0
.supervisor
put $CTXT_STS, $m0

# CHECK: put 80, $m0
.supervisor
put $CCCSLOAD, $m0

# CHECK: put 32, $m0
.supervisor
put $FP_ICTL, $m0

# CHECK: put 1, $m0
.worker
put $WSR, $m0

# CHECK: put 96, $m0
.worker
put $COUNT_L, $m0

# CHECK: put 97, $m0
.worker
put $COUNT_U, $m0

# CHECK: put 2, $m0
.worker
put $VERTEX_BASE, $m0

# CHECK: put 3, $m0
.worker
put $WORKER_BASE, $m0

# CHECK: put 4, $m0
.worker
put $REPEAT_COUNT, $m0

# CHECK: put 5, $m0
.worker
put $REPEAT_FIRST, $m0

# CHECK: put 6, $m0
.worker
put $REPEAT_END, $m0

# CHECK: put 0, $m0
.worker
put $FP_STS, $m0

# CHECK: put 1, $m0
.worker
put $FP_CLR, $m0

# CHECK: put 2, $m0
.worker
put $FP_CTL, $m0

# CHECK: put 3, $m0
.worker
put $PRNG_0_0, $m0

# CHECK: put 4, $m0
.worker
put $PRNG_0_1, $m0

# CHECK: put 5, $m0
.worker
put $PRNG_1_0, $m0

# CHECK: put 6, $m0
.worker
put $PRNG_1_1, $m0

# CHECK: put 7, $m0
.worker
put $PRNG_SEED, $m0

# CHECK: put 8, $m0
.worker
put $TAS, $m0

# CHECK: put 0, $m0
.supervisor
put $CWEI_0_0, $m0

# CHECK: put 1, $m0
.supervisor
put $CWEI_0_1, $m0

# CHECK: put 2, $m0
.supervisor
put $CWEI_0_2, $m0

# CHECK: put 3, $m0
.supervisor
put $CWEI_0_3, $m0

# CHECK: put 4, $m0
.supervisor
put $CWEI_1_0, $m0

# CHECK: put 5, $m0
.supervisor
put $CWEI_1_1, $m0

# CHECK: put 6, $m0
.supervisor
put $CWEI_1_2, $m0

# CHECK: put 7, $m0
.supervisor
put $CWEI_1_3, $m0

# CHECK: put 8, $m0
.supervisor
put $CWEI_2_0, $m0

# CHECK: put 9, $m0
.supervisor
put $CWEI_2_1, $m0

# CHECK: put 10, $m0
.supervisor
put $CWEI_2_2, $m0

# CHECK: put 11, $m0
.supervisor
put $CWEI_2_3, $m0

# CHECK: put 12, $m0
.supervisor
put $CWEI_3_0, $m0

# CHECK: put 13, $m0
.supervisor
put $CWEI_3_1, $m0

# CHECK: put 14, $m0
.supervisor
put $CWEI_3_2, $m0

# CHECK: put 15, $m0
.supervisor
put $CWEI_3_3, $m0

# CHECK: put 16, $m0
.supervisor
put $CWEI_4_0, $m0

# CHECK: put 17, $m0
.supervisor
put $CWEI_4_1, $m0

# CHECK: put 18, $m0
.supervisor
put $CWEI_4_2, $m0

# CHECK: put 19, $m0
.supervisor
put $CWEI_4_3, $m0

# CHECK: put 20, $m0
.supervisor
put $CWEI_5_0, $m0

# CHECK: put 21, $m0
.supervisor
put $CWEI_5_1, $m0

# CHECK: put 22, $m0
.supervisor
put $CWEI_5_2, $m0

# CHECK: put 23, $m0
.supervisor
put $CWEI_5_3, $m0

# CHECK: put 24, $m0
.supervisor
put $CWEI_6_0, $m0

# CHECK: put 25, $m0
.supervisor
put $CWEI_6_1, $m0

# CHECK: put 26, $m0
.supervisor
put $CWEI_6_2, $m0

# CHECK: put 27, $m0
.supervisor
put $CWEI_6_3, $m0

# CHECK: put 28, $m0
.supervisor
put $CWEI_7_0, $m0

# CHECK: put 29, $m0
.supervisor
put $CWEI_7_1, $m0

# CHECK: put 30, $m0
.supervisor
put $CWEI_7_2, $m0

# CHECK: put 31, $m0
.supervisor
put $CWEI_7_3, $m0

# CHECK: put 32, $m0
.supervisor
put $CWEI_8_0, $m0

# CHECK: put 33, $m0
.supervisor
put $CWEI_8_1, $m0

# CHECK: put 34, $m0
.supervisor
put $CWEI_8_2, $m0

# CHECK: put 35, $m0
.supervisor
put $CWEI_8_3, $m0

# CHECK: put 36, $m0
.supervisor
put $CWEI_9_0, $m0

# CHECK: put 37, $m0
.supervisor
put $CWEI_9_1, $m0

# CHECK: put 38, $m0
.supervisor
put $CWEI_9_2, $m0

# CHECK: put 39, $m0
.supervisor
put $CWEI_9_3, $m0

# CHECK: put 40, $m0
.supervisor
put $CWEI_10_0, $m0

# CHECK: put 41, $m0
.supervisor
put $CWEI_10_1, $m0

# CHECK: put 42, $m0
.supervisor
put $CWEI_10_2, $m0

# CHECK: put 43, $m0
.supervisor
put $CWEI_10_3, $m0

# CHECK: put 44, $m0
.supervisor
put $CWEI_11_0, $m0

# CHECK: put 45, $m0
.supervisor
put $CWEI_11_1, $m0

# CHECK: put 46, $m0
.supervisor
put $CWEI_11_2, $m0

# CHECK: put 47, $m0
.supervisor
put $CWEI_11_3, $m0

# CHECK: put 48, $m0
.supervisor
put $CWEI_12_0, $m0

# CHECK: put 49, $m0
.supervisor
put $CWEI_12_1, $m0

# CHECK: put 50, $m0
.supervisor
put $CWEI_12_2, $m0

# CHECK: put 51, $m0
.supervisor
put $CWEI_12_3, $m0

# CHECK: put 52, $m0
.supervisor
put $CWEI_13_0, $m0

# CHECK: put 53, $m0
.supervisor
put $CWEI_13_1, $m0

# CHECK: put 54, $m0
.supervisor
put $CWEI_13_2, $m0

# CHECK: put 55, $m0
.supervisor
put $CWEI_13_3, $m0

# CHECK: put 56, $m0
.supervisor
put $CWEI_14_0, $m0

# CHECK: put 57, $m0
.supervisor
put $CWEI_14_1, $m0

# CHECK: put 58, $m0
.supervisor
put $CWEI_14_2, $m0

# CHECK: put 59, $m0
.supervisor
put $CWEI_14_3, $m0

# CHECK: put 60, $m0
.supervisor
put $CWEI_15_0, $m0

# CHECK: put 61, $m0
.supervisor
put $CWEI_15_1, $m0

# CHECK: put 62, $m0
.supervisor
put $CWEI_15_2, $m0

# CHECK: put 63, $m0
.supervisor
put $CWEI_15_3, $m0

.ifdef ERROR

# CHECK-ERROR: error: The CSR $CTXT_STS cannot be used in Worker mode.
.worker
put $CTXT_STS, $m0

# CHECK-ERROR: error: The CSR $CCCSLOAD cannot be used in Worker mode.
.worker
put $CCCSLOAD, $m0

# CHECK-ERROR: error: The CSR $FP_ICTL cannot be used in Worker mode.
.worker
put $FP_ICTL, $m0

# CHECK-ERROR: error: The CSR $WSR cannot be used in Supervisor mode.
.supervisor
put $WSR, $m0

# CHECK-ERROR: error: The CSR $COUNT_L cannot be used in Supervisor mode.
.supervisor
put $COUNT_L, $m0

# CHECK-ERROR: error: The CSR $COUNT_U cannot be used in Supervisor mode.
.supervisor
put $COUNT_U, $m0

# CHECK-ERROR: error: The CSR $VERTEX_BASE cannot be used in Supervisor mode.
.supervisor
put $VERTEX_BASE, $m0

# CHECK-ERROR: error: The CSR $WORKER_BASE cannot be used in Supervisor mode.
.supervisor
put $WORKER_BASE, $m0

# CHECK-ERROR: error: The CSR $REPEAT_COUNT cannot be used in Supervisor mode.
.supervisor
put $REPEAT_COUNT, $m0

# CHECK-ERROR: error: The CSR $REPEAT_FIRST cannot be used in Supervisor mode.
.supervisor
put $REPEAT_FIRST, $m0

# CHECK-ERROR: error: The CSR $REPEAT_END cannot be used in Supervisor mode.
.supervisor
put $REPEAT_END, $m0

# CHECK-ERROR: error: The CSR $FP_STS cannot be used in Supervisor mode.
.supervisor
put $FP_STS, $m0

# CHECK-ERROR: error: The CSR $FP_CLR cannot be used in Supervisor mode.
.supervisor
put $FP_CLR, $m0

# CHECK-ERROR: error: The CSR $FP_CTL cannot be used in Supervisor mode.
.supervisor
put $FP_CTL, $m0

# CHECK-ERROR: error: The CSR $PRNG_0_0 cannot be used in Supervisor mode.
.supervisor
put $PRNG_0_0, $m0

# CHECK-ERROR: error: The CSR $PRNG_0_1 cannot be used in Supervisor mode.
.supervisor
put $PRNG_0_1, $m0

# CHECK-ERROR: error: The CSR $PRNG_1_0 cannot be used in Supervisor mode.
.supervisor
put $PRNG_1_0, $m0

# CHECK-ERROR: error: The CSR $PRNG_1_1 cannot be used in Supervisor mode.
.supervisor
put $PRNG_1_1, $m0

# CHECK-ERROR: error: The CSR $PRNG_SEED cannot be used in Supervisor mode.
.supervisor
put $PRNG_SEED, $m0

# CHECK-ERROR: error: The CSR $TAS cannot be used in Supervisor mode.
.supervisor
put $TAS, $m0

# CHECK-ERROR: error: invalid operand for instruction
put $FP_INFMT, $m0

# CHECK-ERROR: error: invalid operand for instruction
put $FP_ISCL, $m0

# CHECK-ERROR: error: invalid operand for instruction
put $FP_NFMT, $m0

# CHECK-ERROR: error: invalid operand for instruction
put $FP_SCL, $m0

.endif
